<resources>
    <string name="app_name">Delivery Much Challenge</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="anonimo">Anônimo</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="bem_vindo">"Bem vindo!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_falhou">"Login falhou"</string>
    <string name="avatar_do_propriet_rio_do_reposit_rio">Avatar do proprietário do repositório</string>
    <string name="entrar">Entrar</string>
</resources>